# FlowGuard

./: .env  main.py  pyproject.toml
core/: config.py  database.py  models.py  security.py
frontend/vite-project/: README.md  SETUP.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/vite-project/src/: App.jsx  index.css
frontend/vite-project/src/components/: ExampleSchema.jsx  ProtectedRoute.jsx
frontend/vite-project/src/context/: AuthContext.jsx
frontend/vite-project/src/pages/: Dashboard.jsx  Login.jsx  Settings.jsx  Signup.jsx  Upload.jsx
frontend/vite-project/src/utils/: api.js
routers/: auth_routes.py  schema_routes.py
schemas/: schema_schemas.py  user_schema.py
services/: agent1_service.py  agent2_service.py  stability_score.py  test_executor.py  validation_service.py
